--- a/Nithin2003/Views/Dashboard/BalanceRequest.cshtml
+++ b/Nithin2003/Views/Dashboard/BalanceRequest.cshtml
@@ -1,24 +1,9 @@
-﻿@model IEnumerable<MyUser>
+﻿@model IEnumerable<MyMoneyRequest>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "BalanceRequest";
     Layout = "~/Views/Shared/_DashBoard.cshtml";
 }
-@*<h1>Index</h1>*@
-<!--
-=========================================================
-* Argon Dashboard - v1.2.0
-=========================================================
-* Product Page: https://www.creative-tim.com/product/argon-dashboard
 
-
-* Copyright  Creative Tim (http://www.creative-tim.com)
-* Coded by www.creative-tim.com
-
-
-
-=========================================================
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
--->
 <!DOCTYPE html>
 <html>
 
@@ -55,12 +40,11 @@
                     <!-- Nav items -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Dashboard" asp-action="Index">
+                            <a class="nav-link" >
                                 <i class="ni ni-tv-2 text-primary"></i>
-                                <span class="nav-link-text">My Dashboard</span>
+                                <span class="nav-link-text">Dashboard</span>
                             </a>
                         </li>
-
                         <li class="nav-item">
                             <a class="nav-link">
                                 <i class="ni ni-planet text-orange"></i>
@@ -86,7 +70,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" >
+                            <a class="nav-link">
                                 <i class="ni ni-key-25 text-info"></i>
                                 <span class="nav-link-text">Login</span>
                             </a>
@@ -181,18 +165,18 @@
                     <div class="card">
                         <!-- Card header -->
                         <div class="card-header border-0">
-                            <h3 class="mb-0">Users table</h3>
+                            <h3 class="mb-0">Users Loan table</h3>
                         </div>
                         <!-- Light table -->
                         <div class="table-responsive">
                             <table class="table align-items-center table-flush">
                                 <thead class="thead-light">
                                     <tr>
-                                        <th>User Name</th>
-                                        <th>Age</th>
-                                        <th> User Status</th>
-                                        <th>City</th>
-                                        <th>Account Balance</th>
+                                        <th>User Loan Id</th>
+                                        <th>Requested Username</th>
+                                        <th> User Loan Amount</th>
+                                        <th>Loan Requested Date</th>
+                                        <th>Last Modified </th>
 
 
 
@@ -200,7 +184,7 @@
                                 </thead>
                                 @foreach (var users in Model)
                                 {
-                                    @*<tr>@users.Username</tr>*@
+                                    
 
 
 
@@ -210,23 +194,24 @@
                                                 <div class="media align-items-center">
 
                                                     <div class="media-body">
-                                                        <span class="name mb-0 text-sm">@users.Username</span>
+                                                        <span class="name mb-0 text-sm">@users.LoanId</span>
                                                     </div>
                                                 </div>
                                             </th>
-                                            <td class="budget">
+                                            @*<td class="budget">
                                                 @{
                                                     int age = DateTime.Now.Year - users.Age.Year;
                                                 }
                                                 @age years
-                                            </td>
+                                            </td>*@
                                             <td>
                                                 <span class="badge badge-dot mr-4">
                                                     <i class="bg-warning"></i>
-                                                    <span class="status">@users.UserStatus</span>
+                                                    <span class="status">@users.RequestedUsername</span>
                                                 </span>
                                             </td>
                                             <td>
+                                                <div class=" ni ni-money-coins">
                                                 @*<div class="avatar-group">
                                             <a href="#" class="avatar avatar-sm rounded-circle" data-toggle="tooltip" data-original-title="Ryan Tompson">
                                             <img alt="Image placeholder" src="~/Argon-assets/img/theme/team-1.jpg">
@@ -241,13 +226,14 @@
                                             <img alt="Image placeholder" src="~/Argon-assets/img/theme/team-4.jpg">
                                             </a>
                                             </div>*@
-                                                @users.City
-                                            </td>
-                                            <td>
-                                                <div class=" ni ni-money-coins">
-                                                    <span class="">@users.AccountBalance</span>
-
+                                                @users.LoanAmount
                                                 </div>
+                                            </td>
+                                            <td>                                                
+                                                    <span class="">@users.LoanRequestedDate</span>                                                
+                                            </td>
+                                            <td>                                               
+                                                    <span class="">@users.LastModified</span>                                                
                                             </td>
 
                                             @*<div class="dropdown">
@@ -262,8 +248,8 @@
                                         </div>*@
 
 
-                                            <td><div class="btn"> <a asp-controller="Users" asp-action="EditDetails" asp-route-Username="@users.Username">Edit</a></div></td>
-                                            <td><div class="btn"> <a asp-controller="Users" asp-action="deleteDetails" style="color:red" asp-route-Username="@users.Username">Delete</a></div></td>
+                                            <td><div class="btn"> <a asp-controller="" asp-action="">Approve Loan</a></div></td>
+                                            <td><div class="btn"> <a asp-controller="" asp-action="" style="color:red" >Reject Loan</a></div></td>
                                         </tr>
 
                                     </tbody>
